--- a/Makefile.am
+++ b/Makefile.am
@@ -124,3 +124,10 @@ test-force-pl:
 	cd mysql-test; \
 	./mysql-test-run.pl --force && \
 	./mysql-test-run.pl --ps-protocol --force
+
+#used by autopush.pl to run memory based tests
+test-force-mem:
+	cd mysql-test; \
+	./mysql-test-run.pl --force --mem && \
+	./mysql-test-run.pl --ps-protocol --force --mem
+
