Fix for a compilation failure: mysqladmin_SOURCES is a needed line in Makefile.am.
client/Makefile.am:
  by default, if there is no _SOURCES line, it is assumed that the source
  is a .c file. So for mysqladmin, we really need the _SOURCES line.

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -58,6 +58,7 @@ mysql_SOURCES =			mysql.cc readline.cc sql_string.cc \
 				completion_hash.cc
 mysql_LDADD =			@readline_link@ @TERMCAP_LIB@ \
 				$(LDADD) $(CXXLDFLAGS)
+mysqladmin_SOURCES =		mysqladmin.cc
 
 mysqlbinlog_SOURCES =		mysqlbinlog.cc \
 				$(top_srcdir)/mysys/mf_tempdir.c \
