Preliminary db_dump. Ouputs without transactions, does not dump a header.
git-svn-id: file:///svn/tokudb@441 c7de825b-a66e-492c-adef-691d508d4ae1

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -7,7 +7,7 @@ BDB_LOAD=/usr/local/Berkeleydb.4.1/bin/db_load
 UTILS=            \
    tokudb_gen     \
    tokudb_load    \
-#   tokudb_dump    \
+   tokudb_dump    \
 #End
 
 .PHONY: all clean test test_gen test_gen_hex test_load
