Save new sample offsets
git-svn-id: file:///svn/tokudb@446 c7de825b-a66e-492c-adef-691d508d4ae1

--- a/buildheader/Makefile
+++ b/buildheader/Makefile
@@ -1,5 +1,14 @@
 CFLAGS = -Wall -W -O2 -Werror -g
-#CPPFLAGS=-I../../mysql-5.0.27/mysql-5.0.27/bdb/build_unix/
+runs: runs_mysql runs_installed
+# the mysql versions use the header in the mysql distribution.
+runs_mysql: ./sample_offsets_mysql
+	./sample_offsets_mysql
+runs_installed: sample_offsets
+	./sample_offsets
+sample_offsets_mysql: CPPFLAGS=-I../../mysql-5.0.27/mysql-5.0.27/mysql/build_unix/
+sample_offsets_mysql: sample_offsets.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) $< -o $@
+
 make_db_h.o: make_db_h.c sample_offsets_32.h sample_offsets_64.h
 sample_offsets:
 sample_offsets_local: ./db.h
@@ -8,8 +17,6 @@ sample_offsets_local: sample_offsets.c
  
 db.h: make_db_h
 	./make_db_h  > db.h
-runs: sample_offsets
-	./sample_offsets
 check32: sample_offsets_local
 	./sample_offsets_local
 	diff sample_offsets_local.h sample_offsets_32.h
