--- a/plug.in
+++ b/plug.in
@@ -4,15 +4,11 @@ MYSQL_PLUGIN_DIRECTORY(innobase, [storage/innobase])
 MYSQL_PLUGIN_STATIC(innobase,   [libinnobase.a])
 MYSQL_PLUGIN_DYNAMIC(innobase,  [ha_innodb.la])
 MYSQL_PLUGIN_ACTIONS(innobase,  [
-  AC_CHECK_LIB(rt, aio_read, [innodb_system_libs="-lrt"])
-  AC_SUBST(innodb_system_libs)
-  AC_CHECK_HEADERS(aio.h sched.h)
+  AC_CHECK_HEADERS(sched.h)
   AC_CHECK_SIZEOF(int, 4)
   AC_CHECK_SIZEOF(long, 4)
   AC_CHECK_SIZEOF(void*, 4)
-  AC_CHECK_FUNCS(sched_yield)
-  AC_CHECK_FUNCS(fdatasync)
-  AC_CHECK_FUNCS(localtime_r)
+  AC_CHECK_FUNCS(sched_yield fdatasync localtime_r)
   AC_C_BIGENDIAN
   case "$target_os" in
          lin*)
