Fix the hashit() problem
git-svn-id: file:///svn/tokudb@491 c7de825b-a66e-492c-adef-691d508d4ae1

--- a/newbrt/Makefile
+++ b/newbrt/Makefile
@@ -45,6 +45,7 @@ BINS =  $(REGRESSION_TESTS) \
 libs: log.o
 bins: $(BINS)
 check: bins
+	./benchmark-test --valsize 256 --verify 1
 	$(DTOOL) ./ybt-test
 	$(DTOOL) ./pma-test
 	$(DTOOL) ./cachetable-test
