Do subtransactions properly (without an fsync)
git-svn-id: file:///svn/tokudb@499 c7de825b-a66e-492c-adef-691d508d4ae1

--- a/src-bdbwrap/Makefile
+++ b/src-bdbwrap/Makefile
@@ -45,3 +45,6 @@ ydb.lo: bdbw.h
 bdbw.lo: CPPFLAGS=-I/home/bradley/mysql/build-bdb-with-uniquename/bdb/build_unix
 %.lo: %.c
 	cc $(CPPFLAGS) $< -c -fPIC -o $@ $(CFLAGS)
+
+bdbw.lo: bdbw.h ydb-uniq.h
+
