--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,10 @@
 # On OSX do:
 #   make OSX=OSX
 
-CFLAGS = -W -Wall -Wno-unused -g -fPIC -O2
+LIBNAME=libdb
+
+OPTFLAGS = -O2
+CFLAGS = -W -Wall -Wno-unused -g -fPIC $(OPTFLAGS)
 CPPFLAGS = -I../include -I../newbrt
 CPPFLAGS += -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE
 
@@ -15,15 +18,20 @@ LIBEXT=so
 SHARED=-shared
 endif
 
-LIBNAME=libdb.$(LIBEXT)
-
-install: $(LIBNAME)
-	cp $(LIBNAME) ../lib/
+install: $(LIBNAME).$(LIBEXT) $(LIBNAME).a
+	cp $(LIBNAME).$(LIBEXT) ../lib/
+	cp $(LIBNAME).a ../lib
 
 clean:
-	rm -rf *.$(LIBEXT) *.o
+	rm -rf $(LIBNAME).$(LIBEXT) $(LIBNAME).a *.o
+
 ydb.o: ../include/db.h ../newbrt/cachetable.h ../newbrt/brt.h ../newbrt/log.c
-DBBINS = ydb.o ../newbrt/brt.o ../newbrt/brt-serialize.o ../newbrt/cachetable.o ../newbrt/hashtable.o ../newbrt/header-io.o ../newbrt/key.o ../newbrt/memory.o ../newbrt/pma.o ../newbrt/ybt.o ../newbrt/primes.o ../newbrt/log.o ../newbrt/mempool.o
-$(LIBNAME): $(DBBINS)
-	cc  $(CPPFLAGS) $(DBBINS) $(SHARED) -o $@ $(CFLAGS)
+DBBINS = ydb.o ../newbrt/brt.o ../newbrt/brt-serialize.o ../newbrt/brt-verify.o ../newbrt/cachetable.o ../newbrt/hashtable.o ../newbrt/header-io.o ../newbrt/key.o ../newbrt/memory.o ../newbrt/mempool.o ../newbrt/pma.o ../newbrt/ybt.o ../newbrt/primes.o ../newbrt/log.o ../newbrt/fingerprint.o 
+
+$(LIBNAME).$(LIBEXT): $(DBBINS)
+	cc  $(CPPFLAGS) $(DBBINS) $(SHARED) -o $@ $(CFLAGS) -lz
+
+$(LIBNAME).a: $(DBBINS)
+	$(AR) rv $@ $(DBBINS)
+
 libdb.a(ydb.o): ydb.o
