Try to parse the log
git-svn-id: file:///svn/tokudb@560 c7de825b-a66e-492c-adef-691d508d4ae1

--- a/newbrt/Makefile
+++ b/newbrt/Makefile
@@ -43,6 +43,8 @@ BINS =  $(REGRESSION_TESTS) \
         randdb4 \
 # This line intentially kept commented so I can have a \ on the end of the previous line
 
+logdump: LDFLAGS+=-lz
+
 libs: log.o
 bins: $(BINS)
 check: bins
