Remove memory leak in txn->commit
git-svn-id: file:///svn/tokudb@599 c7de825b-a66e-492c-adef-691d508d4ae1

--- a/newbrt/Makefile
+++ b/newbrt/Makefile
@@ -9,7 +9,7 @@ ifeq ($(CYGWIN),cygwin)
 else
 FPICFLAGS = -fPIC
 # valgrind is not present on cygwin
-DTOOL = valgrind --quiet --error-exitcode=1
+DTOOL = valgrind --quiet --error-exitcode=1 --leak-check=yes
 endif
 
 CFLAGS = -Wall -W $(OPTFLAGS) -g $(GCOV_FLAGS) $(PROF_FLAGS) -Werror $(FPICFLAGS) -Wshadow
