Make the tests run under BDB as well as TDB
git-svn-id: file:///svn/tokudb@611 c7de825b-a66e-492c-adef-691d508d4ae1

--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -4,51 +4,63 @@
 
 ifeq ($(OSX),OSX)
 LIBEXT=dylib
-TEST=
-LOADLIBES = -L../ -ldb
+VGRIND=
+TDB_LOADLIBES = -L../ -ldb
 else
 LIBEXT=so
-LOADLIBES = -L../ -ldb -Wl,-rpath,..
-TEST=valgrind --quiet --error-exitcode=1 --leak-check=yes
+TDB_LOADLIBES = -L../ -ldb -Wl,-rpath,..
+VGRIND=valgrind --quiet --error-exitcode=1 --leak-check=yes
 endif
 
 LIBNAME=libdb.$(LIBEXT)
 CFLAGS = -Wall -Werror -O0 -g
-CPPFLAGS = -I../../include
+
+TDB_CPPFLAGS = -I../../include
 
 SRCS = $(wildcard *.c)
-TESTS = $(patsubst %.c,%,$(SRCS))
 
-all: make_libs $(TESTS)
+TDB_TESTS = $(patsubst %.c,%.tdb,$(SRCS))
+BDB_TESTS = $(patsubst %.c,%.bdb,$(SRCS))
 
-test_log1.bdb: test_log1
+ALL_TESTS = $(TDB_TESTS) $(BDB_TESTS)
 
-check_log0: ./test_log0
-	$(TEST) ./test_log0
-	test -f dir.test_log0/log000000000000.tokulog
-check_log1: ./test_log1
-	$(TEST) ./test_log1
-check_db_close_no_open: ./test_db_close_no_open
-	$(TEST) ./test_db_close_no_open
-check_db_version: ./test_db_version
-	$(TEST) ./test_db_version
-check_db_open_notexist_reopen : ./test_db_open_notexist_reopen
-	$(TEST) ./test_db_open_notexist_reopen
+RUN_TDB_TESTS = $(patsubst %.tdb,%.tdbrun,$(TDB_TESTS))
+RUN_BDB_TESTS = $(patsubst %.bdb,%.bdbrun,$(BDB_TESTS))
+RUN_ALL_TESTS = $(RUN_TDB_TESTS) $(RUN_BDB_TESTS)
 
-.PHONY: check_log0 make_libs
+all: make_libs $(ALL_TESTS)
+
+foo:
+	echo RUN_TDB_TESTS: $(RUN_TDB_TESTS)
+	echo ALL_TESTS: $(ALL_TESTS)
+
+.PHONY: check check.bdb check.tdb
+check: check.bdb check.tdb
+check.bdb: $(RUN_BDB_TESTS)
+check.tdb: $(RUN_TDB_TESTS)
+
+# Need these rule so that Make knows about all the file names
+.PHONY: %.bdbrun %.tdbrun
+$(RUN_ALL_TESTS):
+$(ALL_TESTS):
+
+%.foo:
+	echo $@
+
+%.bdbrun: %.bdb
+	./$<
+%.tdbrun: %.tdb
+	$(VGRIND) ./$<
+
+
+%.bdb: %.c
+	cc  -DDIR=\"dir.$<.bdb\" $(CFLAGS) $< -ldb -o $@
+%.tdb: %.c
+	cc  -DDIR=\"dir.$<.tdb\" $(CFLAGS) $(TDB_CPPFLAGS) $(TDB_LOADLIBES) $< -o $@
+
 make_libs:
 	cd ..;make
-check: $(TESTS) check_log0
-	for testcase in $(TESTS) ; do echo $(TEST) ./$$testcase ; if ! $(TEST) ./$$testcase; then echo "Test Failed!" ; exit 1; fi; done
-
-test_log1.bdb: test_log1.c
-	cc -Wall -Werror -O2 -g test_log1.c -o $@ -ldb -DDBVERSION=\"bdb\"
-
-test_log1.bdb_link: test_log1.c
-	cc -Wall -Werror -O2 -g test_log1.c -o $@ -ldb $(CPPFLAGS)
-
-test_log1.tokudb_link: test_log1.c
-	cc -Wall -Werror -O2 -g test_log1.c -o $@ $(LOADLIBES)
 
 clean:
-	rm -f $(TESTS)
+	rm -f $(ALL_TESTS) *.o
+	rm -rf dir.*.tdb dir.*.bdb
